compiler/testData/diagnostics/tests/sealed/NeverEnum.kt
<!SEALED_MODIFIER_IN_ENUM!>sealed<!> enum class SealedEnum {
    FIRST, 
    SECOND;

    class Derived: SealedEnum()
}
